[FIX] 이미지 삭제 안되던 버그 수정